# nagios-plugins-lcgdm

./: .gitlab-ci.yml  CMakeLists.txt  README  RELEASE-NOTES  build-rpm.sh
configs/: CMakeLists.txt  lcgdm-common.cfg.in  lcgdm-disk.cfg.in  lcgdm-headnode.cfg.in  lcgdm-lfc.cfg.in  nrpe  nrpe.cfg
debian/: README.Debian  changelog  control  copyright  nagios-plugins-lcgdm-common.install  rules
debian/patches/: fix-lib-suffix  series
examples/: CMakeLists.txt  lcgdm-commands.cfg.in
plugins/: CMakeLists.txt  LFC-probe  check_dpm  check_dpm_filesystem  check_dpm_req  check_dpns  check_filesystem_rw  check_gridftp  check_hostcert  check_lfc_sam  check_nfs  check_request_per_user  check_rfio  lcgdmcommon.py
plugins/lfcmetrics/: __init__.py  lfcmetrics.py  threadpool.py
templates.pnp4/: CMakeLists.txt  check_cpu.php  check_dpm_perf.php  check_dpm_pool.php  check_dpm_req.php  check_gridftp_activity.php  check_network.php  check_partition_activity.php  check_process.php  check_space_token.php
